<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lift</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="did_you_lift_today_title">Did You Lift Today?</string>
    <string name="did_you_lift_today">Did you lift today?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lifted_congrats">Congratulations! You lifted!</string>
    <string name="lifted_already_lifted">You already lifted today.</string>
    <string name="weak_go_lift">Weak. Go lift.</string>
    <string name="find_gym">Find Nearby Gyms</string>
    <string name="current_streak">Current Streak</string>
    <string name="best_streak">Best Streak</string>
    <string name="current_streak_label">Current Streak:</string>
    <string name="best_streak_label">Best Streak:</string>
    <string name="share_your_streak">Share Your Streak</string>

</resources>
