<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lifted_congrats"
        android:id="@+id/messageText"
        android:layout_marginTop="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/bestStreakText"
        android:layout_marginTop="69dp"
        android:text="@string/best_streak"
        android:layout_below="@+id/messageText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginRight="26dp"
        android:gravity="right"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/currentStreakText"
        android:text="@string/current_streak"
        android:layout_below="@+id/messageText"
        android:layout_marginTop="24dp"
        android:layout_alignRight="@+id/bestStreakText"
        android:layout_alignEnd="@+id/bestStreakText"
        android:layout_alignLeft="@+id/bestStreakText"
        android:layout_alignStart="@+id/bestStreakText"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/current_streak_label"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/currentStreakText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:gravity="left" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/best_streak_label"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/bestStreakText"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:gravity="left" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_your_streak"
        android:id="@+id/shareButton"
        android:layout_below="@+id/bestStreakText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:onClick="btnShareClick" />

</RelativeLayout>